@@ -1,11 +1,18 @@
+2009-07-20  Kimmo Hämäläinen <kimmo.hamalainen@nokia.com>
+
+	Patch from Artem for NB#126898.
+
+	* src/home/hd-render-manager.c: Ignore animation actors when
+	considering visibility and stacking order.
+
 2009-07-17  Marc Ordinas i Llopis  <marc.ordinasillopis@collabora.co.uk>
 
 	Add a GConf setting to disable showing CallUI in portrait.
 	Fixes: NB#128657
 
 	* src/hildon-desktop-views.schemas:
-	* src/launcher/hd-app-mgr.c: Also re-check conditions when the 1s delay has
-	passed.
+	* src/launcher/hd-app-mgr.c: Also re-check conditions when the 1s
+	delay has passed.
 
 2009-07-17  Aapo Kojo  <aapo.kojo@nokia.com>
 
